# STree-CPP

./: CMakeLists.txt  README.md  rebuild
includes/: STreeIO.h  STreeNode.h
includes/infoproviders/: STreeNodeInfoProvider.h
includes/utils/: encoding_error.h  streamutils.h
src/: STreeIO.cpp  STreeNode.cpp
src/infoproviders/: STreeNodeInfoProvider.cpp
src/utils/: encoding_error.cpp  streamutils.cpp
